# snip

./: Cargo.toml  README.md
.github/workflows/: build.yml  rust.yml  test.yml
completions/: bash
src/: analysis.rs  attachment.rs  build.rs  doc.rs  error.rs  lib.rs  main.rs  search.rs  snip.rs  test_prep.rs
src/snip/: analysis.rs  attachment.rs  doc.rs  error.rs  search.rs  snip.rs  test_prep.rs
test_data/: document.txt  snip.csv  snip_attachment.csv
