[package]
name = "snip-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.10", features = ["unstable-doc"] }
regex = "1.8.4"
rusqlite = "0.29.0"
rust-stemmers = "1.2.0"
uuid = { version = "1.4.0", features = ["v4", "fast-rng"]}
